apps/otterwiki/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: otterwiki
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
