apps/otterwiki/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: otterwiki
  namespace: otterwiki
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wiki.pedrocoutinho.eu`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: traefik
        - name: otterwiki-permissions
          namespace: otterwiki
      services:
        - name: otterwiki
          port: 8080
  tls:
    store:
      name: default
