apps/otterwiki/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: otterwiki-egress
  namespace: otterwiki
spec:
  endpointSelector: {}
  egress:
    - toCIDR:
        - 192.168.50.51/32
      toPorts:
        - ports:
            - port: "22"
              protocol: TCP
